--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,18 +3,7 @@
 {% block title %}Hello HomeController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>C:/wamp64/www/freelance-management-system/src/Controller/HomeController.php</code></li>
-        <li>Your template at <code>C:/wamp64/www/freelance-management-system/templates/home/index.html.twig</code></li>
-    </ul>
+<div>
+    <h1>Bienvenue sur l'application FMS</h1>
 </div>
 {% endblock %}
