--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,50 +19,20 @@
                     <div>
                         <a href="{{ path('app_home') }}" class="text-2xl font-bold text-gray-800 dark:text-white">MS-consulting</a>
                     </div>
-                    <div class="flex items center -mx-2">
+                    <nav class="flex items center -mx-2">
+                        <a href="{{ path('app_home') }}" class="mx-2 text-gray-800 dark:text-white">Home</a>
+                        <a href="{{ path('app_login') }}" class="mx-2 text-gray-800 dark:text-white">Login</a>
+                        <a href="{{ path('app_register') }}" class="mx-2 text-gray-800 dark:text-white">register</a>
                         <a href="{{ path('app_home') }}" class="mx-2 text-gray-800 dark:text-white">Home</a>
                         <a href="{{ path('app_home') }}" class="mx-2 text-gray-800 dark:text-white">Home</a>
                         <a href="{{ path('app_home') }}" class="mx-2 text-gray-800 dark:text-white">Home</a>
                         <a href="{{ path('app_home') }}" class="mx-2 text-gray-800 dark:text-white">Home</a>
-                        <a href="{{ path('app_home') }}" class="mx-2 text-gray-800 dark:text-white">Home</a>
-                        <a href="{{ path('app_home') }}" class="mx-2 text-gray-800 dark:text-white">Home</a>
-                        <a href="{{ path('app_home') }}" class="mx-2 text-gray-800 dark:text-white">Home</a>
-                    </div>
+                    </nav>
                 </div>
             </div>
         </header>
 
         <main class="container">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis porro quasi ut. A amet velit
-                veniam? Ex inventore porro quae! Aut beatae dicta exercitationem ipsum officia quisquam tempora unde
-                voluptas.</p>
-            <p>Adipisci at dicta earum, eos fugit nihil nulla quam quas vero. Explicabo, laudantium numquam placeat
-                porro saepe voluptates. Labore molestias obcaecati quaerat quasi quidem quos voluptas voluptate! Autem,
-                enim, tempora!</p>
-            <p>Adipisci aspernatur culpa cupiditate delectus dicta, eligendi eos fuga hic labore, laborum minima nam
-                nesciunt nobis odit omnis placeat recusandae temporibus voluptatibus. Debitis dolore dolorem, excepturi
-                ipsum recusandae sapiente voluptas.</p>
-            <p>Animi blanditiis eaque expedita minus nemo nihil, nostrum perspiciatis quia, recusandae sunt unde ut vel
-                voluptatum! Amet corporis culpa eaque eos fugiat ipsum nisi quia ratione sed suscipit tempore,
-                ullam?</p>
-            <p>Ab accusantium alias animi asperiores, blanditiis dolor doloremque eius expedita explicabo illum ipsum
-                iusto, laboriosam non odio quam quia sequi sint soluta temporibus tenetur ullam unde ut! Animi fuga,
-                in.</p>
-            <p>A aperiam autem corporis dicta, eius, fugiat harum incidunt modi neque nesciunt, nihil non nulla officia
-                officiis pariatur possimus praesentium quas rem reprehenderit repudiandae ullam vel vero voluptatum.
-                Aut, ipsum.</p>
-            <p>Ab accusamus aperiam, dicta distinctio doloribus esse eveniet fuga inventore ipsam iste laborum maiores
-                molestias nesciunt nisi nobis nulla odio odit optio quaerat quis quos sit soluta tenetur voluptates
-                voluptatibus?</p>
-            <p>Ab deleniti ipsam minima necessitatibus neque officia perspiciatis provident repellat sed sequi. Alias
-                architecto assumenda autem enim esse, est et expedita fugiat illo, laborum nostrum odio quas quos
-                tempore voluptates.</p>
-            <p>Aperiam, atque blanditiis dignissimos iusto magni numquam pariatur saepe vel voluptatum? Delectus hic
-                nesciunt optio quas tempore. Architecto, culpa id itaque laboriosam magnam molestias nam nulla odit quo
-                ut veniam.</p>
-            <p>Culpa cum dolore enim facere id laborum sint. Atque excepturi nobis veniam voluptatibus. Aliquid amet
-                cumque dolor, eos iste, nihil nisi officia omnis quibusdam quisquam, veritatis vero. Harum obcaecati,
-                tempore.</p>
             {% block body %}{% endblock %}
         </main>
 
