--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,10 +18,17 @@
 </head>
 
 <body>
-    <main>
-        {% block body %}{% endblock %}
-    </main>
-
+    <div
+        class="absolute top-0 z-[-2] h-screen w-full bg-white bg-[radial-gradient(100%_50%_at_50%_0%,rgba(0,163,255,0.13)_0,rgba(0,163,255,0)_50%,rgba(0,163,255,0)_100%)]">
+        <div class="antialiased px-4 sm:px-6 md:px-8 h-screen">
+            {% include "components/navbar.html.twig" %}
+            <main>
+                {% block body %}
+                {% endblock %}
+            </main>
+        </div>
+        {% include "components/footer.html.twig" %}
+    </div>
 </body>
 
 </html>
