--- a/templates/components/navbar.html.twig
+++ b/templates/components/navbar.html.twig
@@ -1,21 +1,23 @@
 {% block body %}
 
-<div class="relative pt-6 lg:pt-8 flex items-center justify-between">
-    <a href="{{ path('app_home') }}">
-        <div class="h-10 w-10 bg-black"></div>
-    </a>
-    {% if app.request.attributes.get('_route') != 'app_login' %}
-    <a href="{{ path('app_login') }}">
-        <button
-            class="group relative inline-flex h-12 items-center justify-center overflow-hidden rounded-md bg-neutral-950 px-6 font-medium text-neutral-200">
-            <span>Se connecter</span>
-            <div
-                class="absolute inset-0 flex h-full w-full justify-center [transform:skew(-12deg)_translateX(-100%)] group-hover:duration-1000 group-hover:[transform:skew(-12deg)_translateX(100%)]">
-                <div class="relative h-full w-8 bg-white/20"></div>
-            </div>
-        </button>
-    </a>
-    {% endif %}
+<div class="w-full px-4 sm:px-6 lg:px-8 pt-6">
+    <div class="flex h-16 items-center justify-between">
+        <a href="{{ path('app_home') }}">
+            <div class="h-10 w-10 bg-black"></div>
+        </a>
+        {% if app.request.attributes.get('_route') != 'app_login' %}
+        <a href="{{ path('app_login') }}">
+            <button
+                class="group relative inline-flex h-12 items-center justify-center overflow-hidden rounded-md bg-neutral-950 px-6 font-medium text-neutral-200">
+                <span>Se connecter</span>
+                <div
+                    class="absolute inset-0 flex h-full w-full justify-center [transform:skew(-12deg)_translateX(-100%)] group-hover:duration-1000 group-hover:[transform:skew(-12deg)_translateX(100%)]">
+                    <div class="relative h-full w-8 bg-white/20"></div>
+                </div>
+            </button>
+        </a>
+        {% endif %}
+    </div>
 </div>
 
 {% endblock %}
