--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,34 +3,29 @@
 {% block title %}Freelance Management System{% endblock %}
 
 {% block body %}
-<div
-    class="absolute top-0 z-[-2] h-screen w-screen bg-white bg-[radial-gradient(100%_50%_at_50%_0%,rgba(0,163,255,0.13)_0,rgba(0,163,255,0)_50%,rgba(0,163,255,0)_100%)]">
-    <div class="antialiased px-4 sm:px-6 md:px-8">
-        {% include 'components/navbar.html.twig' %}
-        <div class="relative max-w-5xl mx-auto pt-20 sm:pt-24 lg:pt-32">
-            <h1 class="text text-slate-900 font-semibold text-5xl sm:text-6xl lg:text-7xl tracking-tight text-center ">
-                Freelance Management System without ever leaving invoices.
-            </h1>
-            <p class="mt-6 text-lg text-slate-600 text-center max-w-3xl mx-auto">
-                Le système de gestion des freelances vous permet de gérer facilement vos freelances et leurs projets.
-                Vous pouvez suivre les informations des freelances, attribuer des tâches, gérer les paiements et bien
-                plus encore. Simplifiez votre processus de gestion des freelances avec notre système intuitif et
-                efficace.
-            </p>
-            <div class="mt-6 sm:mt-10 flex justify-center">
-                <a href="{{ path('app_login') }}">
-                    <button
-                        class="group relative inline-flex h-12 items-center justify-center overflow-hidden rounded-md bg-neutral-950 px-6 font-medium text-neutral-200">
-                        <span>Lancez-vous</span>
-                        <div
-                            class="absolute inset-0 flex h-full w-full justify-center [transform:skew(-12deg)_translateX(-100%)] group-hover:duration-1000 group-hover:[transform:skew(-12deg)_translateX(100%)]">
-                            <div class="relative h-full w-8 bg-white/20"></div>
-                        </div>
-                    </button>
-                </a>
-            </div>
-        </div>
+<div class="relative max-w-5xl mx-auto pt-20 sm:pt-24 lg:pt-32">
+    <h1 class="text text-slate-900 font-semibold text-5xl sm:text-6xl lg:text-7xl tracking-tight text-center ">
+        Freelance Management System without ever leaving invoices.
+    </h1>
+    <p class="mt-6 text-slate-600 text-center max-w-3xl mx-auto">
+        Le système de gestion des freelances vous permet de gérer facilement vos freelances et leurs
+        projets.
+        Vous pouvez suivre les informations des freelances, attribuer des tâches, gérer les paiements et
+        bien
+        plus encore. Simplifiez votre processus de gestion des freelances avec notre système intuitif et
+        efficace.
+    </p>
+    <div class="mt-6 sm:mt-10 flex justify-center">
+        <a href="{{ path('app_login') }}">
+            <button
+                class="group relative inline-flex h-12 items-center justify-center overflow-hidden rounded-md bg-neutral-950 px-6 font-medium text-neutral-200">
+                <span>Lancez-vous</span>
+                <div
+                    class="absolute inset-0 flex h-full w-full justify-center [transform:skew(-12deg)_translateX(-100%)] group-hover:duration-1000 group-hover:[transform:skew(-12deg)_translateX(100%)]">
+                    <div class="relative h-full w-8 bg-white/20"></div>
+                </div>
+            </button>
+        </a>
     </div>
 </div>
-
 {% endblock %}
