modification landing page

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -5,15 +5,11 @@
 {% block body %}
 <div class="relative max-w-5xl mx-auto pt-20 sm:pt-24 lg:pt-32">
     <h1 class="text text-slate-900 font-semibold text-5xl sm:text-6xl lg:text-7xl tracking-tight text-center ">
-        Freelance Management System without ever leaving invoices.
+        Simplify your tasks with a Freelance Management System.
     </h1>
-    <p class="mt-6 text-slate-600 text-center max-w-3xl mx-auto">
-        Le système de gestion des freelances vous permet de gérer facilement vos freelances et leurs
-        projets.
-        Vous pouvez suivre les informations des freelances, attribuer des tâches, gérer les paiements et
-        bien
-        plus encore. Simplifiez votre processus de gestion des freelances avec notre système intuitif et
-        efficace.
+    <p class="mt-6 text-slate-900 text-lg text-center max-w-3xl mx-auto">
+        Optimisez la gestion de vos projets et de vos collaborateurs indépendants grâce à notre système de gestion des
+        pigistes. Simplifiez la recherche, la collaboration et le suivi des missions pour une productivité accrue.
     </p>
     <div class="mt-6 sm:mt-10 flex justify-center">
         <a href="{{ path('app_login') }}">
