--- a/templates/components/navbar.html.twig
+++ b/templates/components/navbar.html.twig
@@ -2,9 +2,17 @@
 
 <div class="w-full px-4 sm:px-6 lg:px-8 pt-6">
     <div class="flex h-16 items-center justify-between">
-        <a href="{{ path('app_home') }}">
-            <div class="h-10 w-10 bg-black"></div>
-        </a>
+        <div class="flex items-center">
+            <a href="{{ path('app_home') }}">
+                <div class="h-10 w-10 bg-black"></div>
+            </a>
+            <div class="ml-10 flex items-baseline space-x-9">
+                <a href="#">Product</a>
+                <a href="#">Solutions</a>
+                <a href="#">Ressources</a>
+                <a href="#">Pricing</a>
+            </div>
+        </div>
         {% if app.request.attributes.get('_route') != 'app_login' %}
         <a href="{{ path('app_login') }}">
             <button
