Person crud in dashboard

--- a/templates/dashboard/home/index.html.twig
+++ b/templates/dashboard/home/index.html.twig
@@ -1,7 +1,5 @@
 {% extends 'dashboard_layout.html.twig' %}
 
-{% block title %}Utilisateurs{% endblock %}
-
 {% block content %}
-<h1>Liste des Utilisateurs</h1>
+<h1>Home page</h1>
 {% endblock %}
