--- a/templates/components/footer.html.twig
+++ b/templates/components/footer.html.twig
@@ -1,7 +1,7 @@
 {% block body %}
 
 <footer>
-    <span class="block text-sm py-4 text-gray-500 sm:text-center">
+    <span class="block text-sm py-4 text-slate-100 sm:text-center bg-transparent fixed bottom-0 left-0 right-0 mx-auto">
         ©{{ 'now'|date('Y') }}
         <a href="https://msconsulting-europe.com/" class="hover:underline">
             MS-consulting
