--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,6 +24,7 @@
             {% include "components/navbar.html.twig" %}
             <main>
                 {% block body %}
+                <div>Hello world!</div>
                 {% endblock %}
             </main>
             {% include "components/footer.html.twig" %}
