--- a/templates/dashboard/person/edit.html.twig
+++ b/templates/dashboard/person/edit.html.twig
@@ -8,6 +8,8 @@
     {{ form_widget(personForm) }}
     <button type="submit" class="btn btn-primary">Modifier</button>
     {{ form_end(personForm) }}
+    <a href="{{ path('dashboard_person_index') }}">back to list</a>
+    {{ include('dashboard/person/_delete_form.html.twig') }}
 
 {% endblock %}
 
