--- a/templates/dashboard/person/show.html.twig
+++ b/templates/dashboard/person/show.html.twig
@@ -8,9 +8,9 @@
         <p>phone : {{ person.phone }}</p>
         <p>company : <a href="#">{{ person.company.name }}</a></p>
         <p>created_at : {{ person.createdAt|date('d/m/Y H:i:s') }}</p>
-        <a href="{{ path('dashboard_person_edit', {id: person.id}) }}">Edit</a>
-        <a href="{{ path('dashboard_person_index') }}">Back to list</a>
-        <a href="{{ path('dashboard_person_delete', {id: person.id}) }}">Delete</a>
     </div>
+    <a href="{{ path('dashboard_person_edit', {id: person.id}) }}">Edit</a>
+    <a href="{{ path('dashboard_person_index') }}">Back to list</a>
+    {{ include('dashboard/person/_delete_form.html.twig') }}
 {% endblock %}
 
