--- a/templates/dashboard/person/index.html.twig
+++ b/templates/dashboard/person/index.html.twig
@@ -32,6 +32,6 @@
             {% endfor %}
         </tbody>
     </table>
-    <a href="{{ path('dashboard_person_new') }}">Create a new person</a>
+    <a href="{{ path('dashboard_person_new') }}">Create new</a>
 
 {% endblock %}
