--- a/templates/address/index.html.twig
+++ b/templates/address/index.html.twig
@@ -1,50 +1,37 @@
 {% block title %}{% endblock %}
 
-{% block body %}
+{% block content %}
+<h1>Address Home Page</h1>
 
-<h2>Gérer les lieux</h2>
-
-<section class="place-list">
-    <form method="post">
-        <table>
-            <thead>
-                <tr>
-                    <th>Nom</th>
-                    <th>Rue</th>
-                    <th>Ville</th>
-                    <th>Latitude</th>
-                    <th>Longitude</th>
-                    <th>Actions</th>
-                </tr>
-            </thead>
-            <tbody>
-
-                {% for place in places %}
-                <tr>
-                    <td>{{ place.name }}</td>
-                    <td>{{ place.street }}</td>
-                    <td>{{ place.city.name }}</td>
-                    <td>{{ place.latitude }}</td>
-                    <td>{{ place.longitude }}</td>
-                    <td>
-                        <a href="{{ path('place_edit', {'id': place.id}) }}" title="Modifier">Modifier</a>
-                        <a href="{{ path('place_delete', {'id': place.id}) }}" title="Supprimer"
-                            onclick="return confirm('Êtes-vous sûr de vouloir supprimer ce lieu ?')">Supprimer</a>
-                    </td>
-                </tr>
-                {% endfor %}
-
-                {{ form_start(placeForm) }}
-                {{ form_widget(placeForm.name) }}
-                {{ form_widget(placeForm.street) }}
-                {{ form_widget(placeForm.city) }}
-                {{ form_widget(placeForm.latitude) }}
-                {{ form_widget(placeForm.longitude) }}
-                <button class="place-list-add" type="submit">Ajouter</button>
-
-            </tbody>
-        </table>
-        {{ form_end(placeForm) }}
-</section>
+<table>
+    <thead>
+        <tr>
+            <th>id</th>
+            <th>nbStreet</th>
+            <th>street</th>
+            <th>zipCode</th>
+            <th>city</th>
+            <th>company</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for data in address %}
+        <tr>
+            <td>{{ data.id }}</td>
+            <td>{{ data.nbStreet }}</td>
+            <td>{{ data.street }}</td>
+            <td>{{ data.zipCode }}</td>
+            <td>{{ data.city }}</td>
+            <td>{{ data.company }}</td>
+            <td>
+                <a href="{{ path('show_address', {'id': data.id}) }}">show</a>
+                <a href="{{ path('edit_address', {'id': data.id}) }}">edit</a>
+                <a href="{{ path('delete_address', {'id': data.id}) }}">delete</a>
+            </td>
+        </tr>
+        {% endfor %}
+    </tbody>
+</table>
+<a href="{{ path('new_address') }}">Create a new address</a>
 
 {% endblock %}
