--- a/templates/dashboard_layout.html.twig
+++ b/templates/dashboard_layout.html.twig
@@ -21,6 +21,8 @@
                         up-href="{{ path('dashboard_index') }}">Home</a></li>
                 <li><a href="{{ path('dashboard_person_index') }}" up-target="#content"
                         up-href="{{ path('dashboard_person_index') }}">Person</a></li>
+                <li><a href="{{ path('dashboard_user_index') }}" up-target="#content"
+                       up-href="{{ path('dashboard_user_index') }}">User</a></li>
             </ul>
             <button @click="sidebarOpen = !sidebarOpen" class="absolute -right-3 top-20 cursor-pointer">
                 <div class="h-6 w-6 bg-black"></div>
