--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Inter:wght@100..900&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');
 
 * {
   font-family: 'Urbanist', sans-serif;
@@ -12,4 +12,8 @@ span,
 a {
   font-family: 'Inter', sans-serif;
   font-size: 15px;
+}
+
+button {
+  font-family: 'DM Sans', sans-serif;
 }
