--- a/templates/dashboard/person/show.html.twig
+++ b/templates/dashboard/person/show.html.twig
@@ -3,10 +3,10 @@
 {% block content %}
     <div>
         <p>id : {{ person.id }}</p>
-        <p>lastname : {{ person.lastname }}</p>
-        <p>firstname : {{ person.firstname }}</p>
-        <p>phone : {{ person.phone }}</p>
-        <p>company : <a href="#">{{ person.company.name }}</a></p>
+        <p>lastname : {{ person.lastname ?? 'null' }}</p>
+        <p>firstname : {{ person.firstname ?? 'null' }}</p>
+        <p>phone : {{ person.phone ?? 'null' }}</p>
+        <p>company : <a href="#">{{ person.company.name ?? 'null' }}</a></p>
         <p>created_at : {{ person.createdAt|date('d/m/Y H:i:s') }}</p>
     </div>
     <a href="{{ path('dashboard_person_edit', {id: person.id}) }}">Edit</a>
