--- a/templates/dashboard_layout.html.twig
+++ b/templates/dashboard_layout.html.twig
@@ -23,6 +23,8 @@
                         up-href="{{ path('dashboard_person_index') }}">Person</a></li>
                 <li><a href="{{ path('dashboard_user_index') }}" up-target="#content"
                        up-href="{{ path('dashboard_user_index') }}">User</a></li>
+                <li><a href="{{ path('dashboard_company_index') }}" up-target="#content"
+                       up-href="{{ path('dashboard_company_index') }}">Company</a></li>
             </ul>
             <li
                 class="relative flex items-center py-2 px-3 my-1 font-medium rounded-md cursor-pointer transition-colors">
