--- a/templates/dashboard/address/new.html.twig
+++ b/templates/dashboard/address/new.html.twig
@@ -1,6 +1,6 @@
-{% block title %}{% endblock %}
+{% extends 'dashboard_layout.html.twig' %}
 
-{% block body %}
+{% block content %}
 
 <h2>Address</h2>
 
