--- a/templates/dashboard_layout.html.twig
+++ b/templates/dashboard_layout.html.twig
@@ -17,9 +17,13 @@
     <div class="flex">
 
         <div
-            class="fixed top-0 left-0 h-screen w-16 m-0 flex flex-col bg-gray-900 text-white shadow-lg text-3xl flex items-center pt-4">
-            <a href="{{ path('dashboard_index')}}"><i class="fa-solid fa-ellipsis-vertical"></i></a>
+            class="fixed top-0 left-0 h-screen w-16 m-0 space-y-4 flex flex-col bg-gray-900 text-white shadow-lg text-3xl flex items-center pt-4">
+            <a href="{{ path('dashboard_index')}}"><i class="fa-solid fa-house"></i></a>
             <a href="{{ path('dashboard_address_index')}}"><i class="fa-solid fa-map-location-dot"></i></a>
+            <a href="{{ path('dashboard_company_index')}}"><i class="fa-solid fa-building"></i></a>
+            <a href="{{ path('dashboard_user_index')}}"><i class="fa-solid fa-user"></i></a>
+            <a href="{{ path('dashboard_person_index')}}"><i class="fa-solid fa-person"></i></a>
+            <a href="{{ path('dashboard_mission_index')}}"><i class="fa-regular fa-clipboard"></i></a>
         </div>
 
         <aside :class="sidebarOpen ? ' w-72 hidden' : 'w-12'"
