--- a/templates/dashboard/address/edit.html.twig
+++ b/templates/dashboard/address/edit.html.twig
@@ -2,9 +2,13 @@
 
 {% block content %}
 
-{{ form_start(addressForm) }}
-{{ form_widget(addressForm) }}
-<button type="submit" class="btn btn-primary">Modifier</button>
-{{ form_end(addressForm) }}
+    <h1>Edit de l'address n°<span>{{ address.id }}</span></h1>
+
+    {{ form_start(addressForm) }}
+    {{ form_widget(addressForm) }}
+    <button type="submit" class="btn btn-primary">Modifier</button>
+    {{ form_end(addressForm) }}
+    <a href="{{ path('dashboard_address_index') }}">back to list</a>
+    {{ include('dashboard/address/_delete_form.html.twig') }}
 
 {% endblock %}
