--- a/templates/dashboard/address/show.html.twig
+++ b/templates/dashboard/address/show.html.twig
@@ -8,6 +8,8 @@
     <p>zipCode : {{ address.zipCode }}</p>
     <p>city : {{ address.city }}</p>
     <p>company : <a href="#">{{ address.company }}</a></p>
+    <a href="{{ path('dashboard_address_edit', {id: address.id}) }}">Edit</a>
     <a href="{{ path('dashboard_address_index') }}">Back to list</a>
+    {{ include('dashboard/address/_delete_form.html.twig') }}
 </div>
 {% endblock %}
