--- a/templates/dashboard/address/new.html.twig
+++ b/templates/dashboard/address/new.html.twig
@@ -9,6 +9,7 @@
     {{ form_widget(addressForm) }}
     <button>Ajouter</button>
     {{ form_end(addressForm) }}
+    <a href="{{ path('dashboard_address_index') }}">annuler</a>
 </div>
 
 {% endblock %}
