--- a/templates/dashboard/company/new.html.twig
+++ b/templates/dashboard/company/new.html.twig
@@ -8,6 +8,7 @@
     {{ form_widget(companyForm) }}
     <button type="submit" class="btn btn-primary">Créer</button>
     {{ form_end(companyForm) }}
+    <a href="{{ path('dashboard_company_index') }}">annuler</a>
 
 {% endblock %}
 
