--- a/templates/dashboard_layout.html.twig
+++ b/templates/dashboard_layout.html.twig
@@ -24,6 +24,7 @@
             <a href="{{ path('dashboard_user_index')}}"><i class="fa-solid fa-user"></i></a>
             <a href="{{ path('dashboard_person_index')}}"><i class="fa-solid fa-person"></i></a>
             <a href="{{ path('dashboard_mission_index')}}"><i class="fa-regular fa-clipboard"></i></a>
+            <a href="{{ path('dashboard_supplier_index')}}"><i class="fa-solid fa-parachute-box"></i></a>
         </div>
 
         <aside :class="sidebarOpen ? ' w-72 hidden' : 'w-12'"
