debut de la gestion des factures

--- a/templates/dashboard/mission/index.html.twig
+++ b/templates/dashboard/mission/index.html.twig
@@ -31,6 +31,7 @@
                 <td>
                     <a href="{{ path('dashboard_mission_show', {'id': mission.id}) }}">show</a>
                     <a href="{{ path('dashboard_mission_edit', {'id': mission.id}) }}">edit</a>
+                    <a href="{{ path('dashboard_mission_invoice', {'id': mission.id}) }}">invoice</a>
                 </td>
             </tr>
         {% endfor %}
