--- a/templates/dashboard/mission/invoice.html.twig
+++ b/templates/dashboard/mission/invoice.html.twig
@@ -29,6 +29,7 @@
         </tbody>
     </table>
     <a href="{{ path('dashboard_mission_invoice_new', {'id': mission.id}) }}">Create new invoice</a>
+    <a href="{{ path('dashboard_mission_index') }}">Retour a la liste des missions</a>
 
 {% endblock %}
 
