--- a/templates/dashboard/address/new.html.twig
+++ b/templates/dashboard/address/new.html.twig
@@ -1,15 +1,146 @@
-{% extends 'dashboard_layout.html.twig' %}
+{% extends 'dashboard_layout.html.twig' %} {% block content %}
 
-{% block content %}
+<section>
+  <nav class="flex" aria-label="Breadcrumb">
+    <ol
+      class="inline-flex items-center space-x-1 md:space-x-2 rtl:space-x-reverse"
+    >
+      <li class="inline-flex items-center">
+        <a
+          href="#"
+          class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-blue-600 dark:text-gray-400 dark:hover:text-white"
+        >
+          <svg
+            class="w-3 h-3 me-2.5"
+            aria-hidden="true"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="currentColor"
+            viewBox="0 0 20 20"
+          >
+            <path
+              d="m19.707 9.293-2-2-7-7a1 1 0 0 0-1.414 0l-7 7-2 2a1 1 0 0 0 1.414 1.414L2 10.414V18a2 2 0 0 0 2 2h3a1 1 0 0 0 1-1v-4a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v4a1 1 0 0 0 1 1h3a2 2 0 0 0 2-2v-7.586l.293.293a1 1 0 0 0 1.414-1.414Z"
+            />
+          </svg>
+          Home
+        </a>
+      </li>
+      <li>
+        <div class="flex items-center">
+          <svg
+            class="rtl:rotate-180 w-3 h-3 text-gray-400 mx-1"
+            aria-hidden="true"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 6 10"
+          >
+            <path
+              stroke="currentColor"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="m1 9 4-4-4-4"
+            />
+          </svg>
+          <a
+            href="#"
+            class="ms-1 text-sm font-medium text-gray-700 hover:text-blue-600 md:ms-2 dark:text-gray-400 dark:hover:text-white"
+            >Addresss</a
+          >
+        </div>
+      </li>
+      <li aria-current="page">
+        <div class="flex items-center">
+          <svg
+            class="rtl:rotate-180 w-3 h-3 text-gray-400 mx-1"
+            aria-hidden="true"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 6 10"
+          >
+            <path
+              stroke="currentColor"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="m1 9 4-4-4-4"
+            />
+          </svg>
+          <span
+            class="ms-1 text-sm font-medium text-gray-500 md:ms-2 dark:text-gray-400"
+            >Créer</span
+          >
+        </div>
+      </li>
+    </ol>
+  </nav>
 
-<h2>Address</h2>
+  {{ form_start(addressForm) }}
+  <div class="border-b border-gray-900/10 py-12">
+    <h2 class="text-xl font-bold mb-4">Address</h2>
+    <div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
+      <div class="sm:col-span-3">
+        {{ form_label(addressForm.nbStreet) }}
+        <input
+          name="{{ field_name(addressForm.nbStreet) }}"
+          value="{{ field_value(addressForm.nbStreet) }}"
+          class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+        />
+      </div>
 
-<div>
-    {{ form_start(addressForm) }}
-    {{ form_widget(addressForm) }}
-    <button>Ajouter</button>
-    {{ form_end(addressForm) }}
-    <a href="{{ path('dashboard_address_index') }}">annuler</a>
-</div>
+      <div class="sm:col-span-3">
+        {{ form_label(addressForm.street) }}
+        <input
+          name="{{ field_name(addressForm.street) }}"
+          value="{{ field_value(addressForm.street) }}"
+          class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+        />
+      </div>
+
+      <div class="sm:col-span-4">
+        {{ form_label(addressForm.city) }}
+        <input
+          name="{{ field_name(addressForm.city) }}"
+          value="{{ field_value(addressForm.city) }}"
+          class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+        />
+      </div>
+
+      <div class="sm:col-span-3">
+        {{ form_label(addressForm.company) }}
+        <select
+          name="{{ field_name(addressForm.company) }}"
+          class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:max-w-xs sm:text-sm sm:leading-6"
+        >
+          {% for label, value in field_choices(addressForm.company) %}
+          <option value="{{ value }}">{{ label }}</option>
+          {% endfor %}
+        </select>
+      </div>
+
+      <div class="sm:col-span-full">
+        {{ form_label(addressForm.zipCode) }}
+        <input
+          name="{{ field_name(addressForm.zipCode) }}"
+          value="{{ field_value(addressForm.zipCode) }}"
+          class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+        />
+      </div>
+    </div>
+  </div>
+
+  <div class="mt-6 flex items-center justify-end gap-x-6">
+    <button type="button" class="text-sm font-semibold leading-6 text-gray-900">
+      Cancel
+    </button>
+    <button
+      type="submit"
+      class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
+    >
+      Save
+    </button>
+  </div>
+
+  {{ form_end(addressForm) }}
+</section>
 
 {% endblock %}
