--- a/templates/dashboard/address/index.html.twig
+++ b/templates/dashboard/address/index.html.twig
@@ -18,24 +18,34 @@
     </div>
     <div class="mt-10 hidden md:flex md:flex-col">
         <div class="inline-block min-w-full py-2 align-middle md:px-6 lg:px-8">
+            <form method="get">
+                <label for="limit">Limit :</label>
+                <select name="limit" id="limit">
+                    <option value="5" {% if limit == 5 %} selected {% endif %}>5</option>
+                    <option value="10" {% if limit == 10 %} selected {% endif %}>10</option>
+                    <option value="20" {% if limit == 20 %} selected {% endif %}>20</option>
+                    <option value="50" {% if limit == 50 %} selected {% endif %}>50</option>
+                </select>
+                <button type="submit">Ok</button>
+            </form>
             <div class="overflow-hidden shadow ring-1 ring-black ring-opacity-5 md:rounded-lg">
                 <table class="min-w-full divide-y divide-gray-300">
                     <thead class="bg-gray-50">
                         <tr>
                             <th scope="col" class="py-3.5 pl-6 pr-3 text-left text-sm font-semibold text-gray-900">
-                                id
+                                {{ knp_pagination_sortable(address, 'Id', 'a.id') }}
                             </th>
                             <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">
-                                nbStreet
+                                {{ knp_pagination_sortable(address, 'nbStreet', 'a.nbStreet') }}
                             </th>
                             <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">
-                                street
+                                {{ knp_pagination_sortable(address, 'street', 'a.street') }}
                             </th>
                             <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">
-                                zipCode
+                                {{ knp_pagination_sortable(address, 'zipCode', 'a.zipCode') }}
                             </th>
                             <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">
-                                city
+                                {{ knp_pagination_sortable(address, 'city', 'a.city') }}
                             </th>
                             <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">
                                 company
@@ -116,7 +126,9 @@
         </div>
         {% endfor %}
     </div>
-    {{ knp_pagination_render(address) }}
+    <div class="flex justify-center">
+        {{ knp_pagination_render(address) }}
+    </div>
 </section>
 
 {% endblock %}
