--- a/templates/dashboard/address/new.html.twig
+++ b/templates/dashboard/address/new.html.twig
@@ -6,68 +6,30 @@
       class="inline-flex items-center space-x-1 md:space-x-2 rtl:space-x-reverse"
     >
       <li class="inline-flex items-center">
+        <i class="fa-solid fa-house"></i>
         <a
           href="#"
           class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-blue-600 dark:text-gray-400 dark:hover:text-white"
         >
-          <svg
-            class="w-3 h-3 me-2.5"
-            aria-hidden="true"
-            xmlns="http://www.w3.org/2000/svg"
-            fill="currentColor"
-            viewBox="0 0 20 20"
-          >
-            <path
-              d="m19.707 9.293-2-2-7-7a1 1 0 0 0-1.414 0l-7 7-2 2a1 1 0 0 0 1.414 1.414L2 10.414V18a2 2 0 0 0 2 2h3a1 1 0 0 0 1-1v-4a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v4a1 1 0 0 0 1 1h3a2 2 0 0 0 2-2v-7.586l.293.293a1 1 0 0 0 1.414-1.414Z"
-            />
-          </svg>
           Home
         </a>
       </li>
       <li>
         <div class="flex items-center">
-          <svg
-            class="rtl:rotate-180 w-3 h-3 text-gray-400 mx-1"
-            aria-hidden="true"
-            xmlns="http://www.w3.org/2000/svg"
-            fill="none"
-            viewBox="0 0 6 10"
-          >
-            <path
-              stroke="currentColor"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              d="m1 9 4-4-4-4"
-            />
-          </svg>
+          <i class="fa-solid fa-chevron-right"></i>
           <a
             href="#"
             class="ms-1 text-sm font-medium text-gray-700 hover:text-blue-600 md:ms-2 dark:text-gray-400 dark:hover:text-white"
-            >Addresss</a
+            >Address</a
           >
         </div>
       </li>
       <li aria-current="page">
         <div class="flex items-center">
-          <svg
-            class="rtl:rotate-180 w-3 h-3 text-gray-400 mx-1"
-            aria-hidden="true"
-            xmlns="http://www.w3.org/2000/svg"
-            fill="none"
-            viewBox="0 0 6 10"
-          >
-            <path
-              stroke="currentColor"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              d="m1 9 4-4-4-4"
-            />
-          </svg>
+          <i class="fa-solid fa-chevron-right"></i>
           <span
             class="ms-1 text-sm font-medium text-gray-500 md:ms-2 dark:text-gray-400"
-            >Créer</span
+            >New</span
           >
         </div>
       </li>
@@ -103,18 +65,6 @@
           value="{{ field_value(addressForm.city) }}"
           class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
         />
-      </div>
-
-      <div class="sm:col-span-3">
-        {{ form_label(addressForm.company) }}
-        <select
-          name="{{ field_name(addressForm.company) }}"
-          class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:max-w-xs sm:text-sm sm:leading-6"
-        >
-          {% for label, value in field_choices(addressForm.company) %}
-          <option value="{{ value }}">{{ label }}</option>
-          {% endfor %}
-        </select>
       </div>
 
       <div class="sm:col-span-full">
